banking/gateway/account_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: account-route
  namespace: backend
spec:
  parentRefs:
  - name: banking-gateway
    namespace: gate
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/account
    backendRefs:
    - name: account-service
      port: 3002
