banking/gateway/notify_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notify-route
  namespace: backend
spec:
  parentRefs:
  - name: banking-gateway
    namespace: gate
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/notify
    backendRefs:
    - name: notification-service
      port: 3006
