banking/gateway/payment_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-route
  namespace: backend
spec:
  parentRefs:
  - name: banking-gateway
    namespace: gate
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/payment
    backendRefs:
    - name: payment-service
      port: 3004
