banking/gateway/tx_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tx-route
  namespace: backend
spec:
  parentRefs:
  - name: banking-gateway
    namespace: gate
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/tx
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: transaction-service
      port: 3003
